# mailnaggertray

./: .gitignore  README.md  meson.build
data/: mailnaggertray.desktop
src/: emailswindow.cpp  emailswindow.h  listwidget.cpp  listwidget.h  mailnaggerdbus.cpp  mailnaggerdbus.h  main.cpp  tray.cpp  tray.h  util.cpp  util.h
